# KCL

./: .gitignore  CONTRIBUTING.md  README.md  mojang-login.py  mojang_api.md  package.json  pnpm-lock.yaml
.github/: release-drafter.yml
.github/workflows/: release.yml
scripts/: sync-version.js
src/: App.tsx
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx
src/pages/: AccountPage.tsx  DownloadPage.tsx  GamePage.tsx  HomePage.tsx  InstancePage.tsx  SettingsPage.tsx  ToolBoxPage.tsx
src/utils/: auth.ts  download.ts  instances.ts  minecraft.ts
