[package]
name = "KagamiLauncher"
version = "0.0.3"
description = "Kagami Launcher - A Minecraft Launcher"
authors = ["ImJingLan", "Kagami-Git"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kagamicraftlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8"
dotenvy = "0.15"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
dirs = "5"
rsa = "0.9"
hkdf = "0.12"
sha2 = "0.10"
arrayref = "0.3"

